# substrate-offchain-cb

./: .travis.yml  Cargo.toml  README.md  azure-pipeline.yml
docs/: index.html
runtime/: Cargo.toml
runtime/src/: lib.rs  offchaincb.rs  template.rs
src/: chain_spec.rs  main.rs  service.rs
