[package]
name = "offchain-cb"
version = "2.0.0"
authors = ["Benjamin Kampmann <ben@gnunicorn.org>"]
build = "build.rs"
edition = "2018"

[[bin]]
name = "offchain-cb"
path = "src/main.rs"

[dependencies]
derive_more = "0.14.0"
futures = "0.1"
ctrlc = { version = "3.0", features = ["termination"] }
log = "0.4"
tokio = "0.1"
exit-future = "0.1"
parking_lot = "0.9.0"
codec = { package = "parity-scale-codec", version = "1.0.0" }
trie-root = "0.15.2"
sr-io = { git = "https://github.com/paritytech/substrate/", rev = "223554e547fe802d566815cacf3acf6ce0e7fb78" }
substrate-cli = { git = "https://github.com/paritytech/substrate/", rev = "223554e547fe802d566815cacf3acf6ce0e7fb78" }
primitives = { package = "substrate-primitives", git = "https://github.com/paritytech/substrate/", rev = "223554e547fe802d566815cacf3acf6ce0e7fb78" }
substrate-executor = { git = "https://github.com/paritytech/substrate/", rev = "223554e547fe802d566815cacf3acf6ce0e7fb78" }
substrate-service = { git = "https://github.com/paritytech/substrate/", rev = "223554e547fe802d566815cacf3acf6ce0e7fb78" }
inherents = { package = "substrate-inherents", git = "https://github.com/paritytech/substrate/", rev = "223554e547fe802d566815cacf3acf6ce0e7fb78" }
transaction-pool = { package = "substrate-transaction-pool", git = "https://github.com/paritytech/substrate/", rev = "223554e547fe802d566815cacf3acf6ce0e7fb78" }
network = { package = "substrate-network", git = "https://github.com/paritytech/substrate/", rev = "223554e547fe802d566815cacf3acf6ce0e7fb78" }
babe = { package = "substrate-consensus-babe", git = "https://github.com/paritytech/substrate/", rev = "223554e547fe802d566815cacf3acf6ce0e7fb78" }
babe-primitives = { package = "substrate-consensus-babe-primitives", git = "https://github.com/paritytech/substrate/", rev = "223554e547fe802d566815cacf3acf6ce0e7fb78" }
grandpa = { package = "substrate-finality-grandpa", git = "https://github.com/paritytech/substrate/", rev = "223554e547fe802d566815cacf3acf6ce0e7fb78" }
grandpa-primitives = { package = "substrate-finality-grandpa-primitives", git = "https://github.com/paritytech/substrate/", rev = "223554e547fe802d566815cacf3acf6ce0e7fb78" }
substrate-client = {  git = "https://github.com/paritytech/substrate/", rev = "223554e547fe802d566815cacf3acf6ce0e7fb78" }
basic-authorship = { package = "substrate-basic-authorship", git = "https://github.com/paritytech/substrate/", rev = "223554e547fe802d566815cacf3acf6ce0e7fb78" }
offchain-cb-runtime = { path = "runtime" }

[build-dependencies]
vergen = "3"
